several alignment fixes

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -75,6 +75,11 @@
   height: 100%;
 }
 
+.ParentCenterContainer{
+  max-width: 1200px;
+  margin: auto;
+}
+
 .ProjectCard{
   height: 100%;
 }
